# umdr-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml  deploy.yml  lint.yml
src/: lib.rs  main.rs  state.rs
src/core/: mod.rs
src/core/auth/: controllers.rs  dto.rs  middleware.rs  mod.rs  models.rs  payloads.rs  services.rs  token.rs
src/core/auth/utils/: jwt.rs  password.rs
src/core/health/: controllers.rs  dto.rs  mod.rs  services.rs
src/core/pricing/: controllers.rs  dto.rs  mod.rs  models.rs  payloads.rs  services.rs  validators.rs
src/middleware/: mod.rs  request_logger.rs
src/route/: auth.rs  health.rs  pricing.rs
src/utils/: config.rs  error.rs  mod.rs  openapi.rs  response.rs  seed.rs  terminal.rs  timing.rs
