[package]
name = "umdr-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = "1.52.3"
dotenv = "0.15"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.39"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mongodb = "3.1.1"
argon2 = "0.5.3"
log = "0.4.22"
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.7"
uuid = { version = "1.23.1", features = ["v4"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"